# igstan.ro

./: .gitignore  .gitmodules  Dockerfile  Main.hs  Makefile  _config.yml  categories.md  create-post  cv.html  igstan.cabal  index.html  index.md  post-receive  posts.html  posts.md  readme.md  talks.md
_drafts/: 2011-04-20-understanding-monads-with-javascript.md  2011-07-07-understanding-bananas-lenses-and-barbed-wire.md  2011-07-07-using-network-http-with-bytestrings-in-haskell.md  2011-07-09-java-double-brace-initialization-and-gwt.md  2011-07-09-patterns-in-functional-languages.md  2011-07-18-how-to-lay-out-a-modular-a-java-gwt-project.md  2011-08-02-eclipse-refactorings.md  2012-04-16-an-illustrated-guide-to-higher-order-functions.md  2012-07-14-architecture-of-the-api-project.md  2012-07-14-taking-alan-kay-s-oop-one-step-further.md  2012-07-30-oop-is-programming-with-lots-of-global-scopes.md  2012-08-18-progressive-ux.md  2012-12-29-typeclasses-in-scala.md  2013-01-05-notes-on-sbt.md  2013-05-04-an-analysis-of-hypermedia-apis.md  2013-08-10-theorems-for-free.md  2013-10-28-purely-functional-io.md  2014-01-24-finger-trees.md  2014-04-03-bencoding-in-rust.md  2014-05-05-dependency-injection-constructors-vs-readers.md  2014-05-20-on-designing-apis-as-edsls.md  2014-08-14-mathjax.md  2014-08-26-mips-calling-conventions.md  2014-08-27-cross-compiling-gcc-for-mips-on-mac-os-x.md  2014-08-27-trees-visitors-and-pattern-matching.md  2014-10-23-akka-lessons-learned.md  2015-01-01-paper-an-o-nd-difference-algorithm.md  2015-01-03-paper-an-o-nd-difference-algorithm.md  diff2.md  (+26 more)
(+96 files in other folders)
